--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 			<a href="uiux.html" class="unselected">UI/UX</a>
 			<a href="illustration.html" class="unselected">Illustration</a>
 			<a href="branding.html" class="unselected">Branding</a>
-			<a href="misc.html" class="unselected">Modeling</a>
+			<a href="misc.html" class="unselected">Miscellaneous</a>
 			<a href="about.html" class="active">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
@@ -29,11 +29,11 @@
 	<img src="assets/profpic.png" alt="Profile Photo" style="height: 350px; width: 420px;">
 	<h2><b>empathetic, resilient, goofy</b></h2>
 	<p>Much of who I am is based on my love for understanding people, my grit and determination to learn anything I set my mind to, and my light-hearted, silly attitude towards life. </p>
-	<p>I also don't normally look like I do in that image - I like the photo though, and it's from my <a href="projects/sa.html" class="link">climbing expedition in South Africa.</a> Anyways, outside of having crazy hair days, I am a figure skater, dad joke generator, lover of the outdoors, dedicated journal-er, and aspiring designer!</p>
-	<p>I started designing my freshman year at Dartmouth College, where I am currently a rising senior studying <b>Engineering</b> and <b>Studio Art</b> with a minor in <b>Human-Centered Design</b>. I'm primarily interested in <b>product and UI/UX design</b> and am inspired by solutions that positively impact our community and environment. I am so thankful for all the opportunities I have had and cannot wait for what's down the road.</p>
+	<!-- <p>I also don't normally look like I do in that image - I like the photo though, and it's from <a href="projects/sa.html" class="link">one of my climbing trips.</a> But outside of having crazy hair days, I am an Associate UX Designer at Appian, and a rec!</p> -->
+	<p>I am currently an Associate UX Designer at Appian and recently graduated from Dartmouth College with a major in <b>Engineering</b> modified with <b>Studio Art</b> and a minor in <b>Human-Centered Design</b>. I'm primarily interested in <b>product and UI/UX design</b> and am inspired by solutions that positively impact our community and environment. I am so thankful for all the opportunities I have had and cannot wait for what's next.</p>
 	<br>
 	<div class="proj_img">
-		<a href="mailto:Regina.L.Yan.19@dartmouth.edu"><img src="assets/socmed-57.png" class="socialmedia"></a>
+		<a href="mailto:reginayanster@gmail.com"><img src="assets/socmed-57.png" class="socialmedia"></a>
 		<a href="http://www.linkedin.com/in/reginayan"><img src="assets/socmed-58.png" class="socialmedia"></a>
 	<br>
 	<br>
@@ -43,18 +43,22 @@
 		<ul>
 			<li class="courses">ENGS 12: Design Thinking, <em>received Citation of Excellence</em></li>
 			<li class="courses">ENGS 21: Intro to Engineering, <em>received Phillip R. Jackson award for Best Overall Project</em></li>
+			<li class="courses">ENGS 22: Systems</li>
+			<li class="courses">ENGS 24: Science of Materials</li>
 			<li class="courses">ENGS 31: Digital Electronics</li>
 			<li class="courses">ENGS 33: Solid Mechanics</li>
 			<li class="courses">ENGS 37: Environmental Engineering</li>
+			<li class="courses">ENGS 86: Independent Project (Product Design)</li>
 			<li class="courses">CS 01: Introduction to Programming and Computation (Python)</li>
 			<li class="courses">CS 10: Object-Oriented Programming (Java)</li>
 			<li class="courses">CS 22: 3D Digital Modeling, <em>received Citation of Excellence</em></li>
 			<li class="courses">CS 24: Computer Animation</li>
 			<li class="courses">CS 27: Projects in Digital Arts, <em>received Citation of Excellence</em></li>
 			<li class="courses">CS 28: Advanced Projects in Digital Arts, <em>Neukom Scholar for Computer Science</em></li>
+			<li class="courses">CS 52: Full-Stack Web Development, <em>received Citation of Excellence</em></li>
 			<li class="courses">SART 15: Drawing</li>
 			<li class="courses">SART 16: Sculpture</li>
-			<li class="courses">SART 17: Digital Drawing</li>
+			<li class="courses">SART 17: Digital Drawing, <em>received Citation of Excellence</em></li>
 			<li class="courses">SART 25: Painting</li>
 			<li class="courses">PSYC 21: Perception</li>
 			<li class="courses">PSYC 23: Social Psychology</li>
