--- a/branding.html
+++ b/branding.html
@@ -16,7 +16,7 @@
 			<a href="uiux.html" class="unselected">UI/UX</a>
 			<a href="illustration.html" class="unselected">Illustration</a>
 			<a href="branding.html" class="active">Branding</a>
-			<a href="misc.html" class="unselected">Modeling</a>
+			<a href="misc.html" class="unselected">Miscellaneous</a>
 			<a href="about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
@@ -25,6 +25,7 @@
 
 <div style="padding-top: 150px;"></div>
 <div class="container_featuredProjects">
+	<a href="projects/woodsmoke.html"><img class="tile" src="assets/woodsmoketile.png"></a>   
 	<a href="projects/opo.html"><img class="tile" src="assets/OPOlogos_final_BW_OPO.png"></a>
 	<a href="projects/ef.html"><img class="tile" src="assets/projecttile-40.png"></a>
 	<a href="projects/dmc.html"><img class="tile" src="assets/projecttile-29.png"></a>
