--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<a href="uiux.html" class="unselected">UI/UX</a>
 			<a href="illustration.html" class="unselected">Illustration</a>
 			<a href="branding.html" class="unselected">Branding</a>
-			<a href="misc.html" class="unselected">Modeling</a>
+			<a href="misc.html" class="unselected">Miscellaneous</a>
 			<a href="about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
