--- a/projects/dplanner.html
+++ b/projects/dplanner.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | UI/UX | The Dish.</title>
+	<title>Regina | UI/UX | D-Planner</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
@@ -29,39 +29,30 @@
 		<h1>The Dish.</h1>
 		<div class="proj_img">
 			<img src="../assets/projecttile-44.png" style= "width:80%;">
-			<p>View our site <a href="https://www.thedish.us" class="link">here.</a></p>
+			<p>Check out D-Planner <a href="https://www.thedish.us" class="link">here.</a></p>
 		</div>
 
 
 		<h2>Status: Launched</h2>
 		<h2>Overview</h2>
 		<p>
-		As a design intern at Cogo Labs, I worked on a team with four other interns (two data analysts and two engineers) to create a website from absolute scratch. <mark>The theme was “events”, and the end goal was to maximize 10 metrics</mark> (such as total visitors, ad CPC, returning visitors, bounce rate). 
+		D-Planner is an online course planner and advisor for Dartmouth students. Students needed a platform to discover courses, plan their complex and unique D-Plan schedules, and ensure they fulfill all major and distributive requirements. I worked as the designer on this project along with my team of student developers and project managers over the course of 10 weeks in Winter 2019.
 		</p>
-		<h2>Timeline</h2>
+		<h2>Discovery Phase and User Research</h2>
 		<p>
-			WEEK 1: Researching & Need-Finding
-		</p>
-		<p>
-			WEEK 2: Landing Page & User Buildup
+			Before D-Planner, students used various different resources to plan their schedules. They would search for courses through Dartmouth's ORC, then visit specific department pages to check major/minor requirements as well as terms/periods classes were offered. Students would also consult LayupList for information about medians and course reviews, and they would talk to upperclassmen about professor advice. In the first phase of this project, I researched Dartmouth's existing resources and other universities' student planner applications.   
 		</p>
 		<p>
-			WEEK 2-3: Wireframing
+			-insert layuplist screenshot, darthub/orc and example that we researched
 		</p>
 		<p>
-			WEEK 4: Prototyping & User Feedback
-		</p>
-		<p>
-			WEEK 5: Launch!
-		</p>
-		<p>
-			WEEK 6-10: Iterating & Adding Features
+			User research involved speaking to twenty students across all class years to find out their needs in a course planner website and what they currently do to manage their academic tracks. I found that most students consolidate all their information on excel spreadsheets. Students also frequently switched their on/off and abroad terms (something unique to Dartmouth's 10-week term system) and thus often had 10 different iterations of D-Plan schedules. Students also placed heavy weight on professors, medians, and peer reviews in choosing their courses. 
 		</p>
 
 		<br>
 		<br>
 
-		<h2>Research & Need-Finding</h2>
+		<h2>Sketches and Wireframing</h2>
 		<div class="proj_img">
 			<img src="../assets/internz.png" style= "width:80%;">
 			<p class="subtitle">A fun sticky-note brainstorming session with the team to map existing products, current experiences, and user pain points</p>
@@ -72,7 +63,7 @@
 		<br>
 		<br>
 
-		<h2>Landing Page & User Base Buildup</h2>	
+		<h2>User Testing</h2>	
 		<div class="proj_img">
 			<img src="../assets/landing.png" style= "width:60%;">
 			<p class="subtitle">Initial landing page for the dish.</p>
@@ -90,7 +81,7 @@
 		<br>
 		<br>
 
-		<h2>Wireframing</h2>	
+		<h2>High Fidelity Mockups and Iterations</h2>	
 		<div class="proj_img">
 			<img src="../assets/cariterate.png" style= "width:60%;">
 			<p class="subtitle">A humbling lesson on building a product that will get better and better with each iteration</p>
@@ -105,7 +96,7 @@
 		<br>
 		<br>
 
-		<h2>Prototyping & User Testing</h2>	
+		<h2>Final Designs and Website Development</h2>	
 		<div class="proj_img">
 			<img src="../assets/hifi.png" style= "width:100%;">
 			<p class="subtitle">Desktop and mobile high-fidelity mockups of the 3 main pages</p>
@@ -123,7 +114,7 @@
 		<br>
 		<br>
 
-		<h2>Launch!</h2>	
+		<h2>Technigala</h2>	
 		<div class="proj_img">
 			<img src="../assets/dabeach.png" style= "width:80%;">
 			<p class="subtitle">Does this count as work?</p>
@@ -134,33 +125,16 @@
 		<br>
 		<br>
 
-		<h2>Iterating & Adding Features</h2>	
+		<h2>Reflections</h2>	
 		<div class="proj_img">
 			<img src="../assets/abtest.png" style= "width:100%;">
 			<p class="subtitle">We created this A/B test to see whether users engaged more with illustration icons or photo images</p>
 		</div>
 		<p>
-		After our launch, we kept iterating and adding additional features using data. Our analysts tracked user flow through Piwik (Matomo), and we brainstormed changes or additions that would enhance experience and increase our metrics. We conducted various A/B tests, such as the one above, to see which would reduce bounce rate. 
-		</p>
-		<p>
-		We also tested various ad campaigns to see which would attract users more, and we further focused our campaigns as we learned from previous CPC results. Granularity was a key word during this phrase since we reached a point where we were able to target more and more specific users to optimize our metrics.
-		</p>
-		<div class="proj_img">
-			<img src="../assets/ads.png" style= "width:100%;">
-			<p class="subtitle">We also A/B tested two styles of ads to see which performed better. The ad on the right ultimately had the lower CPC</p>
-		</div>
-		<p>
-		I also learned how to use After Effects during some free moments to bring some “moments of delight” with fun animations!
-		</p>
-		<div class="proj_img">
-			<img src="../assets/home_animation.gif" style= "width:45%;">
-			<img src="../assets/home_gif.gif" style= "width:45%;">
-		</div>
-		<p>
-		Overall, this was such an amazing summer. I learned so much working with my team and design mentor Maddie, and it’s so cool to see how far our product came. <mark>I loved being involved in every aspect of the process - while I was the designer, I still worked with the analysts and engineers to understand what they were doing as well.</mark> Cogo is a very data-driven company, and it was neat using the company's resources to inform our decisions. Moving forward, I'm so excited to take the lessons I learned and make some awesome projects in the future. 
+		This project pushed me as a designer especially in the wireframing and user testing phase by thinking about how to incorporate a lot of data while still making the site easy to navigate for students. I've also started to better understand design trends (it seems like gradients are so popular now with many sites like Hulu abandoning its solid-green color scheme for heavy white space + gradient visuals). Overall I think this term has resulted in some of my best work, and that would not have been possible without the fantastic feedback and constructive criticism from users and my teammates. 
 		</p>
 
-		<p>View our site <a href="https://www.thedish.us" class="link">here.</a></p>
+		<p>Check out D-Planner <a href="https://www.thedish.us" class="link">here.</a></p>
 		<div class="proj_img">
 			<img src="../assets/thecrew.png" style= "width:80%;">
 		</div>
