--- a/projects/engs33.html
+++ b/projects/engs33.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Modeling | ENGS33</title>
+	<title>Regina | Miscellaneous | ENGS33</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
@@ -16,7 +16,7 @@
 			<a href="../uiux.html" class="unselected">UI/UX</a>
 			<a href="../illustration.html" class="unselected">Illustration</a>
 			<a href="../branding.html" class="unselected">Branding</a>
-			<a href="../misc.html" class="active">Modeling</a>
+			<a href="../misc.html" class="active">Miscellaneous</a>
 			<a href="../about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
@@ -119,7 +119,7 @@
 <div class="proj_nav_background">
 	<div class="proj_nav_content">
 		<div class="proj_nav">
-		<h2>More Modeling Projects</h2>
+		<h2>More Miscellaneous Projects</h2>
 			<a href="stressball.html"><img class="tile_small" src="../assets/projecttile-13.png"></a>
 			<a href="superfb.html"><img class="tile_small" src="../assets/projecttile-35.png"></a>
 			<a href="lily.html"><img class="tile_small" src="../assets/projecttile-37.png"></a>
