--- a/projects/humbug.html
+++ b/projects/humbug.html
@@ -16,7 +16,7 @@
 			<a href="../uiux.html" class="unselected">UI/UX</a>
 			<a href="../illustration.html" class="unselected">Illustration</a>
 			<a href="../branding.html" class="active">Branding</a>
-			<a href="../misc.html" class="unselected">Modeling</a>
+			<a href="../misc.html" class="unselected">Miscellaneous</a>
 			<a href="../about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
@@ -51,6 +51,7 @@
 	<div class="proj_nav_content">
 		<div class="proj_nav">
 		<h2>More Branding Projects</h2>
+			<a href="woodsmoke.html"><img class="tile_small" src="../assets/woodsmoketile.png"></a>   
 			<a href="projects/opo.html"><img class="tile_small" src="../assets/OPO.png"></a>
 			<a href="ef.html"><img class="tile_small" src="../assets/projecttile-40.png"></a>
 			<a href="dmc.html"><img class="tile_small" src="../assets/projecttile-29.png"></a>
