--- a/projects/vox.html
+++ b/projects/vox.html
@@ -4,7 +4,8 @@
 	<title>Regina | Illustration | Vox Sportswear</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
-	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div class="head">
@@ -15,7 +16,7 @@
 			<a href="../uiux.html" class="unselected">UI/UX</a>
 			<a href="../illustration.html" class="active">Illustration</a>
 			<a href="../branding.html" class="unselected">Branding</a>
-			<a href="../misc.html" class="unselected">Modeling</a>
+			<a href="../misc.html" class="unselected">Miscellaneous</a>
 			<a href="../about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
