--- a/projects/woodsmoke.html
+++ b/projects/woodsmoke.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Branding | EF Education First</title>
+	<title>Regina | Branding | Woodsmoke</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
@@ -26,49 +26,24 @@
 <div class="top_padding"></div>	
 	<div class="content">
 	<div class="box_content">
-		<h1>EF Education First Branding</h1>
+        <h1>Woodsmoke Magazine</h1>
+        <div class="proj_img">
+                <img src="../assets/woodsmoke.jpeg" style= "width:80%;">
+                <p>View the magazine <a href="https://www.thedish.us" class="link">here.</a></p>
+            </div>
 		<p>
-		Below are some samples (with permission) of my work as a Brand Marketing Intern for the Recruitment team at EF Education First. I designed external campaign material, from flyers and slide decks (shown below) to email/web campaigns used during college career fairs. <mark>The main goal for these pieces was to reflect EF's brand and encourage candidates to apply!</mark>
+            The Dartmouth Outing Club (DOC) is home to the nation's oldest student-run outdoors club. It is a community for everyone interested in getting outside, from the novice kayaker to the experienced boulderer. <mark>For Dartmouth's 250th anniversary, I designed and published Woodsmoke, a celebration of the amazing explorations of the DOC.</mark> Special thanks to Rory Gawler '05 for supporting me throughout this process and to the Outdoor Programs Office for their love and dedication to getting us outside.
 ​		</p>
-		<p>
-		I also worked on some internal projects such as 401(k) and Beneficiary campaigns which had a more free-form "fun" aspect and did not have to adhere to the EF brand. 
-​		</p>
-		<p>
-		Finally, I was able to <mark>drive my own projects and take initiative with new ideas,</mark> which included an on-boarding booklet and the creation of an "Intern" people book that featured the "EF stories" of full-time employees who previously interned at the company. I conducted interviews, captured personalities through photos, wrote engaging copy, and designed the booklet that will be distributed to thousands of students as a marketing tool for recruitment.
-​		</p>
-		<p>
-		Note: While I created all the illustrations and designs, I did not take the photos for the recruitment material.  
-		</p>
 
 		<div class="proj_img">
-		<h2>Recruitment flyers sample (external)</h2>
-		<img src="../assets/EFcollage.png" style= "height:341px; width:659px;">
+		<h2>Sample Spreads</h2>
+        <img src="../assets/sample1.png" style= "width:80%;">
+        <img src="../assets/sample2.png" style= "width:80%;">
+        <img src="../assets/sample3.png" style= "width:80%;">
+        <img src="../assets/sample4.png" style= "width:80%;">
 		</div>
 		<br>
 		<br>
-
-		<div class="proj_img">
-		<h2>Recruitment slide deck sample (external)<h2>
-		<img src="../assets/EFcollage1.png" style= "height:135px; width:660px;">
-		</div>
-		<br>
-		<br>
-
-		<div class="proj_img">
-		<h2>Benefits campaign (internal)</h2>
-		<img src="../assets/EFcollage2.png" style= "height:321px; width:514px;">
-		</div>
-		<br>
-		<br>
-
-		<div class="proj_img">
-		<h2>Recruitment and Brand Marketing Guide (internal)</h2>
-		<img src="../assets/EFmock.png" style= "height:365px; width:560px;">
-		<p>I found that this job was very flexible with a lot of freedom. However, the expectations felt vague at times, so I wrote, designed, printed, and bound this pamphlet that serves as an on-boarding guide for the next intern in this position.</p>
-		</div>
-
-
-
 	</div>
 	</div>
 
@@ -76,8 +51,8 @@
 	<div class="proj_nav_content">
 		<div class="proj_nav">
 		<h2>More Branding Projects</h2>
-			<a href="woodsmoke.html"><img class="tile_small" src="../assets/woodsmoketile.png"></a>   
-			<a href="opo.html"><img class="tile_small" src="../assets/OPO.png"></a>
+            <a href="woodsmoke.html"><img class="tile_small" src="../assets/woodsmoketile.png"></a>   
+            <a href="opo.html"><img class="tile_small" src="../assets/OPO.png"></a>
 			<a href="ef.html"><img class="tile_small" src="../assets/projecttile-40.png"></a>
 			<a href="dmc.html"><img class="tile_small" src="../assets/projecttile-29.png"></a>
 			<a href="sdc.html"><img class="tile_small" src="../assets/projecttile-31.png"></a>
