--- a/misc.html
+++ b/misc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Modeling</title>
+	<title>Regina | Miscellaneous</title>
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link runat="server" rel="icon" type="image/png" href="assets/favicon-01.png">
@@ -17,7 +17,7 @@
 			<a href="uiux.html" class="unselected">UI/UX</a>
 			<a href="illustration.html" class="unselected">Illustration</a>
 			<a href="branding.html" class="unselected">Branding</a>
-			<a href="misc.html" class="active">Modeling</a>
+			<a href="misc.html" class="active">Miscellaneous</a>
 			<a href="about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
