--- a/projects/woodsmoke.html
+++ b/projects/woodsmoke.html
@@ -29,7 +29,7 @@
         <h1>Woodsmoke Magazine</h1>
         <div class="proj_img">
                 <img src="../assets/woodsmoke.jpeg" style= "width:80%;">
-                <p>View the magazine <a href="https://www.thedish.us" class="link">here.</a></p>
+                <p>View the magazine <a href="https://outdoors.dartmouth.edu/doc/woodsmoke.html" class="link">here.</a></p>
             </div>
 		<p>
             The Dartmouth Outing Club (DOC) is home to the nation's oldest student-run outdoors club. It is a community for everyone interested in getting outside, from the novice kayaker to the experienced boulderer. <mark>For Dartmouth's 250th anniversary, I designed and published Woodsmoke, a celebration of the amazing explorations of the DOC.</mark> Special thanks to Rory Gawler '05 for supporting me throughout this process and to the Outdoor Programs Office for their love and dedication to getting us outside.
