added belay belt proj

--- a/projects/belaybelt.html
+++ b/projects/belaybelt.html
@@ -26,25 +26,25 @@
 <div class="top_padding"></div>
 <div class="content">
 <div class="box_content">
-		<h1>Lily Model</h1>
+		<h1>The Belay Belt</h1>
 		<div class="proj_img">
-			<img src="../assets/projecttile-37.png" style= "width:60%;">
+			<img src="../assets/engs86-slides-39.png" style= "width:60%;">
 		</div>
 
 		<p>
-		In the sport of rock climbing, improper belay technique resulting from the belayer standing too far from the wall is a main source of accidents and injuries from lead climbing. This project aimed to correct human errors in lead belaying. The resulting product was the Belay Belt, a device that successfully measured the belayer’s distance from the wall and alerted the belayer when he or she exceeded a safe distance threshold. I worked on this device for my Engineering 86: Independent Project class over the course of 10 weeks in Winter 2019. 
+		In the sport of rock climbing, improper belay technique resulting from the belayer standing too far from the wall is a main source of accidents and injuries from lead climbing. This project aimed to <b>correct human errors in lead belaying.</b> The resulting product was the Belay Belt, a device that successfully measured the belayer’s distance from the wall and alerted the belayer when he or she exceeded a safe distance threshold. I worked on this device for my Engineering 86: Independent Project class over the course of 10 weeks in Winter 2019. 
  
 		</p>
 		<h2>Final Prototype Video demonstration</h2>
 		<div class="container_video">
-		<iframe width="640" height="360" src="https://www.youtube.com/embed/hSWupMssqQU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<iframe width="640" height="360" src="https://www.youtube.com/embed/e8TrOdk4bzM?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 		<p>
-		The final write-up can be found <a href="stressball.html" class="link">here</a>. 
+		The final write-up can be found <a href="https://digitalcommons.dartmouth.edu/engs86/8/" class="link">here</a>. 
 		</p>
 		
 		<h2>Introduction</h2>
-		<p>With the recently announced addition of sport climbing to the Olympics, the climbing world has skyrocketed in popularity the past few years. Lead climbing is a discipline of climbing that involves a “lead climber” and “lead belayer”. The lead climber is climbing up with the rope, clipping into bolts along the way. The lead belayer is on the ground managing the rope by feeding or taking in “slack” (extra rope) to the climber and is responsible for ensuring the climber does not “deck” (hit the ground when falling). Lead climbing is the most popular form of rock climbing and the Dartmouth Mountaineering Club’s main focus in indoor and outdoor climbing. 
+		<p>With the recently announced addition of sport climbing to the Olympics, the climbing world has skyrocketed in popularity the past few years. Lead climbing is a discipline of climbing that involves a "lead climber" and "lead belayer". The lead climber is climbing up with the rope, clipping into bolts along the way. The lead belayer is on the ground managing the rope by feeding or taking in "slack" (extra rope) to the climber and is responsible for ensuring the climber does not "deck" (hit the ground when falling). Lead climbing is the most popular form of rock climbing and the Dartmouth Mountaineering Club’s main focus in indoor and outdoor climbing. 
 		</p>
 
 		<br>
@@ -52,11 +52,20 @@
 
 		<h2>Research</h2>	
 		<div class="proj_img">
-			<img src="../assets/modeling1.png" style= "width:30%;">
-			<img src="../assets/modeling2.png" style= "width:30%;">
-			<img src="../assets/modeling3.png" style= "width:30%;">
+			<img src="../assets/engs86-slides-06.png" style= "width:55%;">
 		</div>
+		<p>With the initial goal of innovating in the climbing field, I eventually decided to focus on injury prevention. Initial research involved a look into climbing injury case studies and a series of interiews of Dartmouth Mountaineering Club climbers to understand the when the injuries occured in the span of a climber's "experience curve". 
+		</p>
+		<div class="proj_img">
+				<img src="../assets/graph1.png" style= "width:55%;">
+		</div>
+		<p>From this research and climber "journey map", I realized I needed to look more into lead climbing and lead belaying. Long story short, I found <b>a major cause of injuries resulted from a lead belayer standing too far away from the wall. </b> This leads to increased slack in the rope, which greatly increases the falling distance for the climber. The schematic in below illustrates the physics component to a climber’s fall.
+		</p>
 
+		<div class="proj_img">
+			<img src="../assets/engs86-slides-31.png" style= "width:55%;">
+		</div>
+		<p>Not only is standing too far away from the wall dangerous for the climber, it is also risky for the belayer. The farther a belayer stands away from the wall, the more distance the climber will fall, thus increasing the force pulling the belayer into the wall. After refining a list of specifications, it was time to get started with designing.</p>
 		<br>
 		<br>
 
@@ -70,8 +79,7 @@
 			The cardboard prototype allowed for experience testing to see what having a clip-on device would feel like. The purpose of the experience testing was to gain initial feedback and findings to help guide further iterations and works-like prototypes. 
 		</p>
 		<div class="proj_img">
-			<img src="../assets/texturing1.png" style= "width:55%;">
-			<img src="../assets/texturing2.png" style= "width:20%;">
+			<img src="../assets/ptype-foam.png" style= "width:55%;">
 		</div>
 		<p>
 			The experience test was conducted in Dartmouth’s Jonathan Belden Daniels ’86 Memorial Climbing Gym with four participants. Each participant performed one round of lead belaying without knowledge of the device. After this first round, the belayers were informed of the dangers of standing too far away from the wall and equipped with the cardboard prototype. They were instructed to belay the climber again, however this time whenever they stepped outside of the safe distance threshold of 6 feet, I would make a verbal "bzz" sound. 
@@ -82,8 +90,7 @@
 		</p>
 		<p><mark>Finding 1: Account for Belayer Rotation movement</mark></p>
 		<div class="proj_img">
-			<img src="../assets/texturing1.png" style= "width:55%;">
-			<img src="../assets/texturing2.png" style= "width:20%;">
+			<img src="../assets/wrongreading.png" style= "width:55%;">
 		</div>
 		<p>
 			The first and most important finding was accounting for an individual’s rotation movement while belaying. As seen above, belayers would often move and rotate around in 3D space, resulting in what would be incorrect readings from a clip-on device. The device’s one sensor would only measure distance in one direction, which would be directly in front of the belayer. This would result in an issue if the belayer were to rotate, and the sensor would record a much higher reading than the belayer’s actual distance from the wall. To account for this problem, three sensors spaces along a belt were used in the next iteration, with the smallest distance being used for the actual reading.  
@@ -91,26 +98,23 @@
 		<p><mark>Finding 2: Different Safe Distance Threshold for Different Belayer-Climber Weight Ratios
 		</mark></p>
 		<p>
-			Light belayers generally need to stand closer to the wall while belaying than heaver belayers because less falling force from the climber is needed to pull them up or into the wall. Feedback from the experience test showed that belayers, especially in the case when a female belayer was paired with a male climber (leading to a lower belayer-climber weight ratio) would find a device that accounted for weight difference in the safety threshold useful. While the possibility of having an input screen upon turning on the device was explored, that alternative was not used because of the complexity in learning how to use the device as well as the time needed to fully equip the device and begin climbing. Instead, a mode button was introduced that would toggle between a “standard mode” 
+			Light belayers generally need to stand closer to the wall while belaying than heaver belayers because less falling force from the climber is needed to pull them up or into the wall. Feedback from the experience test showed that belayers, especially in the case when a female belayer was paired with a male climber (leading to a lower belayer-climber weight ratio) would find a device that accounted for weight difference in the safety threshold useful. While the possibility of having an input screen upon turning on the device was explored, that alternative was not used because of the complexity in learning how to use the device as well as the time needed to fully equip the device and begin climbing. Instead, a mode button was introduced that would toggle between a "standard mode" and "light mode". 
 		</p>
 		<div class="proj_img">
-			<img src="../assets/texturing1.png" style= "width:55%;">
-			<img src="../assets/texturing2.png" style= "width:20%;">
+			<img src="../assets/modebutton.png" style= "width:55%;">
 		</div>
 		<p><mark>Finding 3: Incorporation of Audio Sound</mark></p>
 		<p>
-			In the cardboard prototype, a “buzzing” sound was made to indicate the belayer should move closer to the wall. Feedback showed that individuals did not like the buzzing, noting that it sounded too much like a phone vibration or could be potentially uncomfortable if actually implemented. A new audio sound was implemented with a piezo buzzer and mode button, with different musical tones playing for different scenarios: switching to “standard mode”, switching to “light mode”, and “exceeding safe distance threshold”. 
+			In the cardboard prototype, a "buzzing" sound was made to indicate the belayer should move closer to the wall. Feedback showed that individuals did not like the buzzing, noting that it sounded too much like a phone vibration or could be potentially uncomfortable if actually implemented. A new audio sound was implemented with a piezo buzzer and mode button, with different musical tones playing for different scenarios: switching to "standard mode", switching to "light mode", and "exceeding safe distance threshold". 
 		</p>
 		<div class="proj_img">
-			<img src="../assets/texturing1.png" style= "width:55%;">
-			<img src="../assets/texturing2.png" style= "width:20%;">
+			<img src="../assets/audio.gif" style= "width:55%;">
 		</div>
 
 
 		<h2>Prototype 2: Foamcore Prototype</h2>
 		<div class="proj_img">
-			<img src="../assets/texturing1.png" style= "width:55%;">
-			<img src="../assets/texturing2.png" style= "width:20%;">
+			<img src="../assets/foamcore.png" style= "width:55%;">
 		</div>
 		<p>
 			The next iteration was a foamcore prototype with electronics components that incorporated the changes from the feedback in Iteration 1. The prototype uses an Arduino Uno along with three HC-SR04 Ultrasonic Distance Sensors. It also incorporates a mode button, piezo buzzer, and volume adjuster (potentiometer). The prototype was built on a foamcore strip to mimic a belt, rather than the clip-on device in Iteration 1.
@@ -121,31 +125,28 @@
 
 		<h2>Prototype 3: Belay Belt</h2>
 		<div class="proj_img">
-			<img src="../assets/texturing1.png" style= "width:55%;">
-			<img src="../assets/texturing2.png" style= "width:20%;">
+			<img src="../assets/final-proto.png" style= "width:55%;">
+			<img src="../assets/final-prototype.jpg" style= "width:55%;">
 		</div>
 		<p>
-			The third iteration combined works-like aspects of Iteration 2 with a looks-like feel to be used for testing. Figure 8 shows the Belay Belt with additional changes from Iteration 2. 
+			The third iteration combined works-like aspects of Iteration 2 with a looks-like feel to be used for testing.
 		</p>
 		<p>
-			The Velcro seams allow for the inside core of the belt to be removed if needed, which allowed for flexibility in making alterations to the electronics. A removable, rechargeable USB battery was added for convenience, and the belt features a buckle and adjustable straps to fit varying waist sizes. The electronics components, shown in Figure 9, show improvement from the previous iteration. The smaller Arduino Nano replaced the previous Uno, and the sensors were turned in a vertical fashion to allow for more bend in the belt. The buzzer, potentiometer, button, and Nano were eventually soldered on to breadboards to increase strength after finalizing the prototype
+			The Velcro seams allow for the inside core of the belt to be removed if needed, which allowed for flexibility in making alterations to the electronics. A removable, rechargeable USB battery was added for convenience, and the belt features a buckle and adjustable straps to fit varying waist sizes. The smaller Arduino Nano replaced the previous Uno, and the sensors were turned in a vertical fashion to allow for more bend in the belt. The buzzer, potentiometer, button, and Nano were eventually soldered on to breadboards to increase strength after finalizing the prototype
 		</p>
 		
 		<br>
 		<br>
 
 		<h2>Testing and Analysis</h2>	
-		<div class="proj_img">
-			<img src="../assets/rigging1.png" style= "width:23%;">
-			<img src="../assets/rigging2.png" style= "width:30%;">
-			<img src="../assets/rigging3.png" style= "width:35%;">
-<!-- 			**/ maybe put in specs/results chart**/ -->
-		</div>
 		<p>
-			Testing of the final prototype, the Belay Belt, was conducted at Evo Rock Gym in Concord, New Hampshire. A video of testing can be found <a href="https://www.thedish.us" class="link">here.</a>
+			Testing of the final prototype, the Belay Belt, was conducted at Evo Rock Gym in Concord, New Hampshire. A video of testing can be found above.
 		</p>
+		<div class="proj_img">
+				<img src="../assets/engs86-slidesspecs-37.png" style= "width:55%;">
+			</div>
 		<p>
-			The most important specification was reducing belayer distance from the wall. To test this specification, eight individuals ranging from Dartmouth climbers to climbing community members performed one round of lead belaying without the Belt and one round with the Belt (in “standard mode”). Their average distance away from the wall was calculated from measuring their distance every five seconds with distance markers. Each individual reduced his or her average distance from the wall with the Belt, with all of them being within the safety threshold when equipped with the Belt, but only half being within the safety threshold without the belt. Full specifications and testing can be found in my <a href="https://www.thedish.us" class="link">report</a>.
+			The most important specification was reducing belayer distance from the wall. To test this specification, eight individuals ranging from Dartmouth climbers to climbing community members performed one round of lead belaying without the Belt and one round with the Belt (in "standard mode"). Their average distance away from the wall was calculated from measuring their distance every five seconds with distance markers. Each individual reduced his or her average distance from the wall with the Belt, with all of them being within the safety threshold when equipped with the Belt, but only half being within the safety threshold without the belt. 
 		</p>
 		
 		<br>
@@ -164,6 +165,7 @@
 	<div class="proj_nav_content">
 		<div class="proj_nav">
 		<h2>More Miscellaneous Projects</h2>
+			<a href="belaybelt.html"><img class="tile_small" src="../assets/belaybeltcover.png"></a>
 			<a href="stressball.html"><img class="tile_small" src="../assets/projecttile-13.png"></a>
 			<a href="superfb.html"><img class="tile_small" src="../assets/projecttile-35.png"></a>
 			<a href="lily.html"><img class="tile_small" src="../assets/projecttile-37.png"></a>
