--- a/projects/superfb.html
+++ b/projects/superfb.html
@@ -62,12 +62,13 @@
 	<div class="proj_nav_content">
 		<div class="proj_nav">
 		<h2>More Miscellaneous Projects</h2>
-			<a href="stressball.html"><img class="tile_small" src="../assets/projecttile-13.png"></a>
-			<a href="superfb.html"><img class="tile_small" src="../assets/projecttile-35.png"></a>
-			<a href="lily.html"><img class="tile_small" src="../assets/projecttile-37.png"></a>
-			<a href="engs33.html"><img class="tile_small" src="../assets/projecttile-53.png"></a>
-			<a href="lapdesk.html"><img class="tile_small" src="../assets/projecttile-54.png"></a>
-			<a href="diner.html"><img class="tile_small" src="../assets/projecttile-38.png"></a>
+		<a href="belaybelt.html"><img class="tile_small" src="../assets/belaybeltcover.png"></a>
+		<a href="stressball.html"><img class="tile_small" src="../assets/projecttile-13.png"></a>
+		<a href="superfb.html"><img class="tile_small" src="../assets/projecttile-35.png"></a>
+		<a href="lily.html"><img class="tile_small" src="../assets/projecttile-37.png"></a>
+		<a href="engs33.html"><img class="tile_small" src="../assets/projecttile-53.png"></a>
+		<a href="lapdesk.html"><img class="tile_small" src="../assets/projecttile-54.png"></a>
+		<a href="diner.html"><img class="tile_small" src="../assets/projecttile-38.png"></a>
 		</div>
 	</div>
 </div>
