added google analytics

--- a/projects/stressball.html
+++ b/projects/stressball.html
@@ -6,6 +6,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143754998-1"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+	
+		gtag('config', 'UA-143754998-1');
+		</script>
 </head>
 <body>
 <div class="head">
@@ -37,7 +46,7 @@
 			<h2>Model Renders and Film Screenshots</h2>
 		<div class="proj_img">
 			<img src="../assets/pencup_render.jpg" style= "height:23%; width:20%;">
-			<img src="../assets/fan_render.jpg" style= "height:21.6%%; width:20%;">
+			<img src="../assets/fan_render.jpg" style= "height:21.6%; width:20%;">
 			<img src="../assets/coke-render.jpg" style= "height:25%; width:20%;">
 			<img src="../assets/clothes-render.jpg" style= "height:56.3%; width:80%;">
 			<img src="../assets/screen4.png" style= "height:56.3%; width:80%;">
