--- a/projects/adventurebook.html
+++ b/projects/adventurebook.html
@@ -6,6 +6,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143754998-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-143754998-1');
+	</script>
+
 </head>
 <body>
 <div class="head">
